add gecko entry to manifest to enable firefox WebExtensions interoperability

--- a/manifest.json
+++ b/manifest.json
@@ -29,5 +29,10 @@
         "src/inject/inject.js"
       ]
     }
-  ]
+  ],
+  "applications": {
+    "gecko": {
+      "id": "not@cdt.gd"
+    }
+  }
 }
